--- a/README.rdoc
+++ b/README.rdoc
@@ -6,7 +6,8 @@ Install Pygments (http://pygments.org/):
 
 == Installation
 
-    cd ~/Library/Application\ Support/TextMate/Bundles
+    sudo mkdir -p /Library/Application\ Support/TextMate/Bundles
+    cd /Library/Application\ Support/TextMate/Bundles
     git clone git://github.com/acangiano/pygments-textmate-bundle.git
 
 If TextMate is running while you perform the update, you may want to also execute the following line:
