--- a/README.rdoc
+++ b/README.rdoc
@@ -6,9 +6,11 @@ Install Pygments (http://pygments.org/):
 
 == Installation
 
+    
     sudo mkdir -p /Library/Application\ Support/TextMate/Bundles
     cd /Library/Application\ Support/TextMate/Bundles
-    git clone git://github.com/acangiano/pygments-textmate-bundle.git
+    cd /tmp
+    git clone git://github.com/acangiano/pygments-textmate-bundle.git "Pygments.bundle"
 
 If TextMate is running while you perform the update, you may want to also execute the following line:
 
