--- a/README.rdoc
+++ b/README.rdoc
@@ -9,7 +9,7 @@ Install Pygments (http://pygments.org/):
     
     sudo mkdir -p /Library/Application\ Support/TextMate/Bundles
     cd /Library/Application\ Support/TextMate/Bundles
-    git clone git://github.com/acangiano/pygments-textmate-bundle.git "Pygments.bundle"
+    git clone git://github.com/acangiano/pygments-textmate-bundle.git "Pygments.tmbundle"
 
 If TextMate is running while you perform the update, you may want to also execute the following line:
 
